# messgen

./: .clang-format  .gitignore  CMakeLists.txt  LICENSE  Makefile  README.md  generate.py  messgen-generate.py  messgen.py  pyproject.toml  requirements.txt
.github/actions/node/: action.yml
.github/workflows/: cpp.yml  js.yml  python.yml
.run/: generate-ts .run.xml  generate-ts-with-typed-array.run.xml
integrations/cmake/: messgen.cmake
messgen/: __init__.py  common.py  cpp_generator.py  cpp_generator2.py  data_types_preprocessor.py  dynamic.py  generator.py  go_generator.py  json_generator.py  md_generator.py  messgen_ex.py  messgen_types.py  model.py  parser.py  proto_loader.py  protocol_version.py  protocols.py  ts_generator.py  ts_generator_v2.py  types.py  utils.py  validation.py  version_protocol.py  yaml_parser.py
port/cpp/common/messgen/: inplace_payload.h  messgen_def.h
port/cpp/messgen/: Dynamic.h  MemoryAllocator.h  MessageInfo.h  Metadata.h  Parser.h  Serializer.h  SimpleDetector.h  Storage.h  bitmasks.h  messgen.h  stl.h
port/cpp/nostl/messgen/: Allocator.h  messgen.h
port/cpp/stl/messgen/: messgen.h
port/cpp_dynamic/messgen_dynamic/: MessgenDynamic.cpp  MessgenDynamic.h
port/cpp_nostl/messgen/: concepts.h  messgen.h
port/cpp_stl/messgen/: concepts.h  messgen.h
port/go/messgen/: messgen.go
port/js/: .editorconfig  .eslintrc.js  .gitignore  jest.config.js  package-lock.json  package.json  prettier.config.js  rollup.config.js  tsconfig.eslint.json  tsconfig.json  tsup.config.js  vite.config.js  vitest.config.js
port/js/benchmarks/: deserialize-variant.bench.js  fromEntries.benchmark.js  serializeObj.bench.js  serializeObj.benchmark.js  struct.bench.ts  v1-vs-old-typedArry.bench.ts  v1-vs-old.bench.ts
port/js/src/: Buffer.ts  Codec copy.ts  Codec.ts  Codec.types.ts  Converter.ts  HEADER_STRUCT.ts  Messgen.ts  NestedConverter.ts  PrimitiveConverter.ts  Struct.ts  StructConverter.ts  config.ts  constants.ts  index.ts  messgen.d.ts  messgen.js  messgen.ts  parseType.ts  types.ts  utf8.js  utf8.ts
port/js/tests/: BasicConverter.test.ts  Codec.test.ts  ConverterFactory.test.ts  EnumConverter.test.ts  Integration.test.ts  Messgen.test.ts  NestedConverter.test.ts  PrimitiveConverter.test.ts  ProtocolManager.test.ts  Protocols.test.ts  ScalarConverter.test.ts  StructConvertert.test.ts  calcSize.test.ts  messgen.test.js  old-messgen.test.js  parseType.test.ts  utf8.test.js  utf8.test.ts  utils.ts
port/python/: README.txt  messgen-dynamic.py  messgen_dynamic.py
tests/: CMakeLists.txt  Makefile
tests/cpp/: CppNostlTest.cpp  CppTest.cpp  CppTest.h  MessgenTest.h  main.cpp  utils.h
tests/cpp/common/: InplacePayloadTest.h  main.cpp
tests/cpp/entities/msgs/: Existing.h
tests/cpp/nostl/: main.cpp
tests/cpp/stl/: CppTest.h
tests/cpp/super/duper/project/: existing.cpp  existing.h
tests/cpp_dynamic/: main.cpp
tests/cpp_nostl/: CppNostlTest.h  main.cpp
tests/cpp_serialize_to_files/: README.md  SerializeToFiles.h  main.cpp
tests/cpp_stl/: CppTest.h  main.cpp
tests/data/protocols/: test_proto.yaml
tests/data/protocols/nested/: another_proto.yaml
tests/data/serialized/: README.md
tests/data/types/messgen/test/: complex_struct.yaml  complex_struct_nostl.yaml  flat_struct.yaml  struct_with_enum.yaml  var_size_struct.yaml
tests/data/types_invalid/: README.md
tests/data/types_invalid/cyclic_type_reference/: message_b.yaml
tests/data/types_invalid/duplicate_field_names/: duplicate_field_names.yaml
tests/data/types_invalid/invalid_type_class/: invalid_type_class.yaml
tests/data/types_invalid/missing_type_class/: missing_type_class.yaml
tests/go/test/: main.go
tests/js/: CMakeLists.txt  main  main.cpp  messgen.test.js  utf8.test.js
tests/js/coverage/: clover.xml
tests/js/coverage/lcov-report/: index.html
tests/js/messages/messgen/messgen_test/: messages.json
tests/js/msgs/messages/messgen/messgen_test/: embedded_dynamic_message_d1.cpp  embedded_dynamic_message_d1.h  embedded_message_d1.cpp  embedded_message_d2.cpp  embedded_message_d2.h  empty.h  messages.h  proto.h  simple_dynamic_message.cpp  simple_message.cpp  simple_message.h
tests/messages/another_proto/: _protocol.yaml  cross_proto.yaml  one_more_message.yaml
tests/messages/invalid_protocols/absent_field_name/: absent_field_name.yaml
tests/messages/invalid_protocols/absent_field_type/: absent_field_type.yaml
tests/messages/invalid_protocols/cyclic_type_reference/: message_a.yaml
tests/messages/invalid_protocols/empty_field_name/: empty_field_name.yaml
tests/messages/invalid_protocols/field_name_is_cpp_keyword/: field_name_is_cpp_keyword.yaml
tests/messages/invalid_protocols/field_name_is_not_string/: field_name_is_not_string.yaml
tests/messages/invalid_protocols/yaml_name_invalid/: 42.yaml
tests/messages/messgen/messgen_test/: _protocol.yaml  _types.yaml  embedded_dynamic_message_d1.yaml  embedded_message_d1.yaml  embedded_message_d2.yaml  empty.yaml  explicit_padding.yaml  implicit_padding.yaml  simple_dynamic_message.yaml  simple_message.yaml  typed_array_dynamic_message.yaml  typed_array_message.yaml  use_existing.yaml  use_one_existing.yaml
tests/messages/messgen/test_proto/: _protocol.yaml  complex_struct.yaml  complex_struct_nostl.yaml  empty_struct.yaml  simple_enum.yaml  simple_struct.yaml  simple_variant.yaml  struct_with_enum.yaml  struct_with_optional.yaml  struct_with_variant.yaml  var_size_struct.yaml
tests/python/: generate_serialized_data.py  invalid_protocols_test.py  invalid_types_test.py  test.py  test_invalid_types.py  test_serialization.py  test_validation.py
tests/serialized_data/json/: complex_struct.json  flat_struct.json
tests/types/: cross_proto.yaml
tests/types/messgen/test/: complex_struct.yaml  complex_struct_with_empty.yaml
(+44 files in other folders)
